[project]
name = "notion-whatsapp-bot"
version = "0.1.0"
description = "A Notion WhatsApp bot built with FastAPI."
authors = [
    { name = "Megha", email = "megha1207singh@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "python-dotenv",
    "twilio",
    "python-multipart",
    "notion-client",  # Use notion-client instead of notion
    "pytz",
    "fastmcp",
    "mcp",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"